--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-	<title>Mikhail Dunaev - frontend developer</title>
+	<title>Mikhail Dunaev - Engineering Manager</title>
 	<meta property="og:title"
 	      content="Mikhail Dunaev" />
 	<meta property="og:description"
-	      content="Frontend Developer" />
+	      content="Engineering Manager" />
 	<meta property="og:image"
 	      content="http://mdunaev.github.io/og.png" />
 	<link href="./bundle/style.css"
@@ -31,23 +31,36 @@
 		<div class="intro">
 			<p>Hello World!</p>
 			<p>My name is Mikhail Dunaev.<i class="fa fa-camera-retro cv-photo"></i></p>
-			<p>I'm 35 years old UI/UX developer from Moscow, Russia, based in Tallinn, Estonia during the last 3 years.</p>
-			<p>I have over ten years work experience as a lead frontend developer and earlier
-				I had extensive backgrounds in graphic design.</p>
+			<p>I'm 36 years old Engineering Manager / Software developer from Moscow, Russia, based in Tallinn, Estonia during the last 3 years.</p>
+			<p>Expertise:</p>
 
-			<p>My main specialty is rich interfaces, game development, infographics, and interactive storytelling.</p>
+<p>12+ years in software development. Moscow: RIA Novosti, Rambler&Co. Estonia: Evolution Gaming, Paxful.</p>
 
-			<p>The preferred technologies is TypeScript,
-				React, Redux, D3.js, WebGL, Node.js.</p>
+<p>5+ years of engineering leadership experience. 
 
-			<p>Also I'm interested in blockchain. <br> My hobby project for Ethereum blockchain - <a target="_blank"
+<p>The organiser of the frontend meetup - <a target="_blank"
+					     href="https://tallinnjs.github.io/">Tallinn.js</a>. Speaker at various technical meetups.</p>
+
+<p>Expert in Frontend development. React, Redux, Typescript, Functional approach.</p>
+
+<p>Experience in building a Frontend Department from the scratch to 30+ developers.  Setting up workflows, gitflow. Building an exemplary working environment based on the motivation.</p>
+
+<p>Managing Product Design and R+D departments.</p>
+
+<p>Managing sustainable development with Scrum; <a target="_blank"
+				   href="https://icagile.com/Agile-Professionals/Find-Agile-Professionals/ctl/UserDetails/mid/938/uid/8c3eca4a-a3fb-4a87-9c6d-a8b4e6203449">Certified Agile Professional</a>, as well as managing legacy (waterfall) development environments.</p>
+
+<p>Experience in making technical decisions based on business needs.</p>
+
+<p>Technical and strategic input to business and software development lifecycle.</p>
+
+<p>Substantial experience as a hiring manager and interviewer across multiple disciplines.</p>
+
+<p>Managing distributed software development teams.</p>
+
+<p>Also I'm interested in blockchain. <br> My hobby project for Ethereum blockchain - <a target="_blank"
 				   href="https://medium.com/ethplace/building-public-crypto-art-in-the-ethereum-network-fded5d8c3b8e">eth/place</a>.
 			</p>
-
-			<p>I'm <a target="_blank"
-				   href="https://icagile.com/Agile-Professionals/Find-Agile-Professionals/ctl/UserDetails/mid/938/uid/8c3eca4a-a3fb-4a87-9c6d-a8b4e6203449">certified</a>
-				Agile specialist and organiser <a target="_blank"
-				   href="https://tallinnjs.github.io/">TallinnJS</a> meetup.
 				<p>Some of my talks at various conferences:</p>
 				<a class="talk-video"
 				   href="https://www.youtube.com/watch?v=owhyY09iEk0"
@@ -408,57 +421,6 @@
 			</div>
 			<!-- to here -->
 
-
-			<!-- form here -->
-			<div class="works--item">
-				<div class="works--item--cover">
-					<img src="/images/work/population.png"
-					     alt="">
-				</div>
-				<div class="works--item--name">
-					The growth of world population
-				</div>
-				<div class="works--item--content">
-					<div class="works--item--content--name">
-						The growth of world population
-					</div>
-
-					<div class="works--item--content--close"><i class="fa fa-times"
-						   aria-hidden="true"></i></div>
-
-					<span class="works--item--content__blue">
-						The visualisation which I made with Adobe Flash.
-					</span>
-					It shows population size and density on the world map.
-					<br>
-					<br>
-					<div id="flashcontent_container"
-					     style="min-height: 900px;"><object type="application/x-shockwave-flash"
-						        data="https://cdn2.img.ria.ru/images/47631/65/476316526.swf"
-						        width="900"
-						        height="900"
-						        id="flashcontent"
-						        style="visibility: visible;">
-							<param name="allowFullScreen"
-							       value="true">
-							<param name="allowScriptAccess"
-							       value="always">
-							<param name="play"
-							       value="true">
-							<param name="loop"
-							       value="true">
-							<param name="wmode"
-							       value="direct"></object></div>
-
-					<a href="http://ria.ru/infografika/20111031/476281909.html"
-					   target="_blank">
-						<i class="fa fa-link big-link"
-						   aria-hidden="true"></i>
-					</a>
-				</div>
-			</div>
-			<!-- to here -->
-
 			<!-- form here -->
 			<div class="works--item">
 				<div class="works--item--cover">
@@ -532,43 +494,6 @@
 					<a href="https://www.behance.net/gallery/37268313/Webinarru-generativnaja-ajdentika"
 					   target="_blank">
 						<i class="fa fa-link big-link"
-						   aria-hidden="true"></i>
-					</a>
-				</div>
-			</div>
-			<!-- to here -->
-
-			<!-- form here -->
-			<div class="works--item">
-				<div class="works--item--cover">
-					<img src="/images/work/game.png"
-					     alt="">
-				</div>
-				<div class="works--item--name">
-					Aerohockey
-				</div>
-				<div class="works--item--content">
-					<div class="works--item--content--name">
-						Aerohockey
-					</div>
-
-					<div class="works--item--content--close"><i class="fa fa-times"
-						   aria-hidden="true"></i></div>
-
-					<span class="works--item--content__blue">
-						Web game.
-					</span>
-					The user can choose a single game or play in the World Cup against the top teams.
-					<br>
-					It contains simple ai and has realistic physics.
-					<br>
-					<br>
-					<a href="http://ria.ru/hockey2011_mm/20110426/368461781.html
-
-					"
-					   target="_blank">
-						<img src="/images/work/game-full.png"
-						     alt=""><br><i class="fa fa-link big-link"
 						   aria-hidden="true"></i>
 					</a>
 				</div>
