--- a/index.html
+++ b/index.html
@@ -32,33 +32,33 @@
 			<p>Hello World!</p>
 			<p>My name is Mikhail Dunaev.<i class="fa fa-camera-retro cv-photo"></i></p>
 			<p>I'm 36 years old Engineering Manager / Software developer from Moscow, Russia, based in Tallinn, Estonia during the last 3 years.</p>
-			<p>Expertise:</p>
+			<p><b>Expertise:</b></p>
 
-<p>12+ years in software development. Moscow: RIA Novosti, Rambler&Co. Estonia: Evolution Gaming, Paxful.</p>
+<p>• 12+ years in software development. Moscow: RIA Novosti, Rambler&Co. Estonia: Evolution Gaming, Paxful.</p>
 
-<p>5+ years of engineering leadership experience. 
+<p>• 5+ years of engineering leadership experience. 
 
-<p>The organiser of the frontend meetup - <a target="_blank"
+<p>• The organiser of the frontend meetup - <a target="_blank"
 					     href="https://tallinnjs.github.io/">Tallinn.js</a>. Speaker at various technical meetups.</p>
 
-<p>Expert in Frontend development. React, Redux, Typescript, Functional approach.</p>
+<p>• Expert in Frontend development. React, Redux, Typescript, Functional approach.</p>
 
-<p>Experience in building a Frontend Department from the scratch to 30+ developers.  Setting up workflows, gitflow. Building an exemplary working environment based on the motivation.</p>
+<p>• Experience in building a Frontend Department from the scratch to 30+ developers.  Setting up workflows, gitflow. Building an exemplary working environment based on the motivation.</p>
 
-<p>Managing Product Design and R+D departments.</p>
+<p>• Managing Product Design and R+D departments.</p>
 
-<p>Managing sustainable development with Scrum; <a target="_blank"
+<p>• Managing sustainable development with Scrum; <a target="_blank"
 				   href="https://icagile.com/Agile-Professionals/Find-Agile-Professionals/ctl/UserDetails/mid/938/uid/8c3eca4a-a3fb-4a87-9c6d-a8b4e6203449">Certified Agile Professional</a>, as well as managing legacy (waterfall) development environments.</p>
 
-<p>Experience in making technical decisions based on business needs.</p>
+<p>• Experience in making technical decisions based on business needs.</p>
 
-<p>Technical and strategic input to business and software development lifecycle.</p>
+<p>• Technical and strategic input to business and software development lifecycle.</p>
 
-<p>Substantial experience as a hiring manager and interviewer across multiple disciplines.</p>
+<p>• Substantial experience as a hiring manager and interviewer across multiple disciplines.</p>
 
-<p>Managing distributed software development teams.</p>
+<p>• Managing distributed software development teams.</p>
 
-<p>Also I'm interested in blockchain. <br> My hobby project for Ethereum blockchain - <a target="_blank"
+<p>• Also I'm interested in blockchain. <br> My hobby project for Ethereum blockchain - <a target="_blank"
 				   href="https://medium.com/ethplace/building-public-crypto-art-in-the-ethereum-network-fded5d8c3b8e">eth/place</a>.
 			</p>
 				<p>Some of my talks at various conferences:</p>
@@ -508,7 +508,7 @@
 			</div>
 			<br>
 			<p>
-				<b>UX Engineering Director</b>
+				<b>Director of Engineering</b>
 				<br>
 				<i>Built a UX Department from scratch. More than 30 employees.</i>
 				<br>
@@ -549,7 +549,7 @@
 				April 2014 – April 2016
 			</p>
 			<p>
-				<b>Lead Flash Developer</b>
+				<b>Team Lead / Actionscript Developer</b>
 				<br>
 				<i>Development and management small group of developers (6 person)</i>
 				<br>
