--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <p>• Managing Product Design and R+D departments.</p>
 
 <p>• Managing sustainable development with Scrum; <a target="_blank"
-				   href="https://icagile.com/Agile-Professionals/Find-Agile-Professionals/ctl/UserDetails/mid/938/uid/8c3eca4a-a3fb-4a87-9c6d-a8b4e6203449">Certified Agile Professional</a>, as well as managing legacy (waterfall) development environments.</p>
+				   href="https://www.icagile.com/Certification/Verify-Credentials/ctl/UserDetails/mid/697/uid/8c3eca4a-a3fb-4a87-9c6d-a8b4e6203449">Certified Agile Professional</a>, as well as managing legacy (waterfall) development environments.</p>
 
 <p>• Experience in making technical decisions based on business needs.</p>
 
