--- a/index.html
+++ b/index.html
@@ -36,10 +36,7 @@
 
 <p>• 12+ years in software development. Moscow: RIA Novosti, Rambler&Co. Estonia: Evolution Gaming, Paxful.</p>
 
-<p>• 5+ years of engineering leadership experience. 
-
-<p>• The organiser of the frontend meetup - <a target="_blank"
-					     href="https://tallinnjs.github.io/">Tallinn.js</a>. Speaker at various technical meetups.</p>
+<p>• 5+ years of engineering leadership experience.
 
 <p>• Expert in Frontend development. React, Redux, Typescript, Functional approach.</p>
 
@@ -49,7 +46,10 @@
 
 <p>• Managing sustainable development with Scrum; <a target="_blank"
 				   href="https://www.icagile.com/Certification/Verify-Credentials/ctl/UserDetails/mid/697/uid/8c3eca4a-a3fb-4a87-9c6d-a8b4e6203449">Certified Agile Professional</a>, as well as managing legacy (waterfall) development environments.</p>
-
+ 
+<p>• The organiser of the frontend meetup - <a target="_blank"
+					     href="https://tallinnjs.github.io/">Tallinn.js</a>. Speaker at various technical meetups.</p>
+			
 <p>• Experience in making technical decisions based on business needs.</p>
 
 <p>• Technical and strategic input to business and software development lifecycle.</p>
@@ -61,7 +61,7 @@
 <p>• Also I'm interested in blockchain. <br> My hobby project for Ethereum blockchain - <a target="_blank"
 				   href="https://medium.com/ethplace/building-public-crypto-art-in-the-ethereum-network-fded5d8c3b8e">eth/place</a>.
 			</p>
-				<p>Some of my talks at various conferences:</p>
+			<p><b>Some of my talks at various conferences:</b></p>
 				<a class="talk-video"
 				   href="https://www.youtube.com/watch?v=owhyY09iEk0"
 				   target="_blank">
