--- a/index.html
+++ b/index.html
@@ -44,17 +44,13 @@
 
 <p>• Managing Product Design and R+D departments.</p>
 
-<p>• Managing sustainable development with Scrum; <a target="_blank"
-				   href="https://www.icagile.com/Certification/Verify-Credentials/ctl/UserDetails/mid/697/uid/8c3eca4a-a3fb-4a87-9c6d-a8b4e6203449">Certified Agile Professional</a>, as well as managing legacy (waterfall) development environments.</p>
+<p>• Management skills with Scrum. <a target="_blank"
+				   href="https://www.icagile.com/Certification/Verify-Credentials/ctl/UserDetails/mid/697/uid/8c3eca4a-a3fb-4a87-9c6d-a8b4e6203449">Certified Agile Professional</a>, Experience in making technical decisions based on business needs.</p>
  
 <p>• The organiser of the frontend meetup - <a target="_blank"
 					     href="https://tallinnjs.github.io/">Tallinn.js</a>. Speaker at various technical meetups.</p>
-			
-<p>• Experience in making technical decisions based on business needs.</p>
 
-<p>• Technical and strategic input to business and software development lifecycle.</p>
-
-<p>• Substantial experience as a hiring manager and interviewer across multiple disciplines.</p>
+<p>• Experience as a hiring manager and interviewer for different positions.</p>
 
 <p>• Managing distributed software development teams.</p>
 
