--- a/index.html
+++ b/index.html
@@ -2,6 +2,18 @@
 <html>
 
 <head>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-180140458-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-180140458-1');
+</script>
+
+	
 	<title>Mikhail Dunaev - Engineering Manager</title>
 	<meta property="og:title"
 	      content="Mikhail Dunaev" />
