--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
   <body>
     <div class="logo">
       <img src="/logo.png" width="100px" height="100px" alt="" />
+      <a class="cvpdf" target="_blank" href="/CV-Mikhail-Dunaev.pdf"
+        >CV in PDF</a
+      >
     </div>
     <div class="app">
       <div class="examples"></div>
@@ -54,9 +57,9 @@
           <li>5+ years of engineering leadership experience.</li>
 
           <li>
-            Expert in Frontend development. Data visulisation, Animations, Rich
-            Media, CMS and many more.<br />
-            React, Redux, Typescript, Functional approach.
+            Expert in Frontend development. React, Redux, Typescript, Functional
+            approach.<br />
+            Data visulisation, Animations, Rich Media, CMS and many more.
           </li>
 
           <li>
@@ -244,6 +247,10 @@
               <i class="fa fa-envelope-o"></i
             ></a>
           </p>
+
+          <a class="cv" href="/CV-Mikhail-Dunaev.pdf" target="_blank">
+            CV in PDF</a
+          >
         </div>
       </div>
 
