--- a/index.html
+++ b/index.html
@@ -1,262 +1,291 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=UA-180140458-1"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
+    <head>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script
+            async
+            src="https://www.googletagmanager.com/gtag/js?id=UA-180140458-1"
+        ></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() {
+                dataLayer.push(arguments);
+            }
+            gtag("js", new Date());
 
-      gtag("config", "UA-180140458-1");
-    </script>
+            gtag("config", "UA-180140458-1");
+        </script>
 
-    <title>Mikhail Dunaev - Engineering Manager</title>
-    <meta property="og:title" content="Mikhail Dunaev" />
-    <meta property="og:description" content="Engineering Manager" />
-    <meta property="og:image" content="http://mdunaev.github.io/og.png" />
-    <link href="./bundle/style.css" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" href="/bundle/font-awesome.min.css" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Anonymous+Pro:400,700&amp;subset=latin,cyrillic,latin-ext"
-      rel="stylesheet"
-      type="text/css"
-    />
-  </head>
+        <title>Mikhail Dunaev - Engineering Manager</title>
+        <meta property="og:title" content="Mikhail Dunaev" />
+        <meta property="og:description" content="Engineering Manager" />
+        <meta property="og:image" content="http://mdunaev.github.io/og.png" />
+        <link href="./bundle/style.css" rel="stylesheet" type="text/css" />
+        <link rel="stylesheet" href="/bundle/font-awesome.min.css" />
+        <link
+            href="https://fonts.googleapis.com/css?family=Anonymous+Pro:400,700&amp;subset=latin,cyrillic,latin-ext"
+            rel="stylesheet"
+            type="text/css"
+        />
+    </head>
 
-  <body>
-    <div class="logo">
-      <img src="/logo.png" width="100px" height="100px" alt="" />
-      <a class="cvpdf" target="_blank" href="/CV-Mikhail-Dunaev.pdf"
-        >CV in PDF</a
-      >
-    </div>
-    <div class="app">
-      <div class="examples"></div>
-      <div class="intro">
-        <p>Hello World!</p>
-        <p>
-          My name is Mikhail Dunaev.<i class="fa fa-camera-retro cv-photo"></i>
-        </p>
-        <p>
-          I'm 37 years old Engineering Manager / Software developer from Moscow,
-          Russia, based in Tallinn, Estonia during the last 4 years.
-        </p>
-        <div class="middle--header">Expertise:</div>
-        <ul>
-          <li>
-            12+ years in software development. Moscow: RIA Novosti, Rambler&Co.
-            Estonia: Evolution Gaming, Paxful.
-          </li>
-
-          <li>5+ years of engineering leadership experience.</li>
-
-          <li>
-            Expert in Frontend development. React, Redux, Typescript, Functional
-            approach.<br />
-            Data visulisation, Animations, Rich Media, CMS and many more.
-          </li>
-
-          <li>
-            Experience in building a Frontend Department from the scratch to 30+
-            developers. Setting up workflows, gitflow. Building an exemplary
-            working environment based on the motivation.
-          </li>
-
-          <li>Managing Product Design and R+D departments.</li>
-
-          <li>
-            Management skills with Scrum.
-            <a
-              target="_blank"
-              href="https://www.icagile.com/Certification/Verify-Credentials/ctl/UserDetails/mid/697/uid/8c3eca4a-a3fb-4a87-9c6d-a8b4e6203449"
-              >Certified Agile Professional</a
-            >, Experience in making technical decisions based on business needs.
-          </li>
-
-          <li>
-            The organiser of the frontend meetup -
-            <a target="_blank" href="https://tallinnjs.github.io/">Tallinn.js</a
-            >. Speaker at various technical meetups.
-          </li>
-
-          <li>
-            Experience as a hiring manager and interviewer for different
-            positions.
-          </li>
-
-          <li>Managing distributed software development teams.</li>
-
-          <li>
-            Also I'm interested in blockchain. <br />
-            My hobby project for Ethereum blockchain -
-            <a
-              target="_blank"
-              href="https://medium.com/ethplace/building-public-crypto-art-in-the-ethereum-network-fded5d8c3b8e"
-              >eth/place</a
-            >.
-          </li>
-        </ul>
-        <div class="middle--header">
-          Some of my talks at various conferences:
+    <body>
+        <div class="logo">
+            <img src="/logo.png" width="100px" height="100px" alt="" />
+            <a class="cvpdf" target="_blank" href="/CV-Mikhail-Dunaev.pdf"
+                >CV in PDF</a
+            >
         </div>
-        <br />
-        <a
-          class="talk-video"
-          href="https://www.youtube.com/watch?v=owhyY09iEk0"
-          target="_blank"
-        >
-          <img src="/images/devclub2.png" alt="" width="300px" /><span
-            class="talk-video--text"
-            >DevClub 2018 / Tallinn</span
-          >
-        </a>
-        <br />
-        <a
-          class="talk-video"
-          href="https://www.youtube.com/watch?v=lkTH4-jsioA"
-          target="_blank"
-        >
-          <img src="/images/devclub.png" alt="" /><span class="talk-video--text"
-            >DevClub 2017 / Tallinn</span
-          >
-        </a>
-        <br />
-        <a
-          class="talk-video"
-          href="https://www.youtube.com/watch?v=QAVNsSAI6nk"
-          target="_blank"
-        >
-          <img src="/images/mjs2.png" alt="" /><span class="talk-video--text"
-            >MoscowJS 2016 / Moscow</span
-          >
-        </a>
-        <br />
-        <a
-          class="talk-video"
-          href="https://www.youtube.com/watch?v=NdxRTiM6pPo"
-          target="_blank"
-        >
-          <img src="/images/mjs1.png" alt="" /><span class="talk-video--text"
-            >MoscowJS 2015 / Moscow</span
-          >
-        </a>
-        <br />
-        <a
-          class="talk-video"
-          href="https://www.youtube.com/watch?v=F8Q3brDDZ3A"
-          target="_blank"
-        >
-          <img src="/images/rit.png" alt="" /><span class="talk-video--text"
-            >FrontendConf 2015 / Moscow</span
-          >
-        </a>
-      </div>
-      <div class="experience">
-        <div class="middle--header">Experience:</div>
+        <div class="app">
+            <div class="examples"></div>
+            <div class="intro">
+                <p>Hello World!</p>
+                <p>
+                    My name is Mikhail Dunaev.<i
+                        class="fa fa-camera-retro cv-photo"
+                    ></i>
+                </p>
+                <p>
+                    I'm 37 years old Engineering Manager / Software developer
+                    from Moscow, Russia, based in Tallinn, Estonia during the
+                    last 4 years.
+                </p>
+                <div class="middle--header">Expertise:</div>
+                <ul>
+                    <li>
+                        12+ years in software development. Moscow: RIA Novosti,
+                        Rambler&Co. Estonia: Evolution Gaming, Paxful.
+                    </li>
 
-        <p>
-          <b>Director of Engineering</b>
-          <br />
-          <i>Built a UX Department from scratch. More than 30 employees.</i>
-          <br />
-          Paxful OÜ
-          <br />
-          November 2018 - current
-        </p>
+                    <li>5+ years of engineering leadership experience.</li>
 
-        <p>
-          <b>JavaScript Developer</b>
-          <br />
-          <i>Development of various types of online casino games</i>
-          <br />
-          Evolution Gaming Estonia
-          <br />
-          January 2017 – April 2018
-        </p>
-        <p>
-          <b>Senior Frontend Developer</b>
-          <br />
-          <i
-            >Development from scratch and organising workflow process of a
-            website with news of science -
-            <a href="https://indicator.ru/" target="_blank"
-              >https://indicator.ru/</a
-            ></i
-          >
-          <br />
-          Rambler&Co
-          <br />
-          April 2016 – December 2016
-        </p>
-        <p>
-          <b>Frontend Developer</b>
-          <br />
-          <i
-            >Development and support biggest news website in Russia -
-            <a href="http://lenta.ru" target="_blank">http://lenta.ru</a></i
-          >
-          <br />
-          Rambler&Co
-          <br />
-          April 2014 – April 2016
-        </p>
-        <p>
-          <b>Team Lead / Actionscript Developer</b>
-          <br />
-          <i>Development and management small group of developers (6 person)</i>
-          <br />
-          RIA Novosti
-          <br />
-          January 2011 – April 2014
-        </p>
-        <p>
-          <b>Art Director</b>
-          <br />
-          <i>Brand Identity Definition</i>
-          <br />
-          Kraft Group
-          <br />
-          May 2008 – December 2010
-        </p>
-        <br />
-      </div>
+                    <li>
+                        Expert in Frontend development. React, Redux,
+                        Typescript, Functional approach.<br />
+                        Data visulisation, Animations, Rich Media, CMS and many
+                        more.
+                    </li>
 
-      <div class="contacts">
-        <div class="middle--header">
-          <b>Contacts</b>
-          <p>
-            <a href="http://www.linkedin.com/in/mikhail-dunaev" target="_blank">
-              <i class="fa fa-linkedin"></i
-            ></a>
+                    <li>
+                        Experience in building a Frontend Department from the
+                        scratch to 30+ developers. Setting up workflows,
+                        gitflow. Building an exemplary working environment based
+                        on the motivation.
+                    </li>
 
-            <a href="https://www.facebook.com/mdunaev" target="_blank">
-              <i class="fa fa-facebook"></i
-            ></a>
+                    <li>Managing Product Design and R+D departments.</li>
 
-            <a href="https://www.instagram.com/dunaev/" target="_blank">
-              <i class="fa fa-instagram"></i
-            ></a>
+                    <li>
+                        Management skills with Scrum.
+                        <a
+                            target="_blank"
+                            href="https://www.icagile.com/Certification/Verify-Credentials/ctl/UserDetails/mid/697/uid/8c3eca4a-a3fb-4a87-9c6d-a8b4e6203449"
+                            >Certified Agile Professional</a
+                        >, Experience in making technical decisions based on
+                        business needs.
+                    </li>
 
-            <a href="mailto:dunaev.m@gmail.com" target="_blank">
-              <i class="fa fa-envelope-o"></i
-            ></a>
-          </p>
+                    <li>
+                        The organiser of the frontend meetup -
+                        <a target="_blank" href="https://tallinnjs.github.io/"
+                            >Tallinn.js</a
+                        >. Speaker at various technical meetups.
+                    </li>
 
-          <a class="cv" href="/CV-Mikhail-Dunaev.pdf" target="_blank">
-            CV in PDF</a
-          >
+                    <li>
+                        Experience as a hiring manager and interviewer for
+                        different positions.
+                    </li>
+
+                    <li>Managing distributed software development teams.</li>
+
+                    <li>
+                        Also I'm interested in blockchain. <br />
+                        My hobby project for Ethereum blockchain -
+                        <a
+                            target="_blank"
+                            href="https://medium.com/ethplace/building-public-crypto-art-in-the-ethereum-network-fded5d8c3b8e"
+                            >eth/place</a
+                        >.
+                    </li>
+                </ul>
+                <div class="middle--header">
+                    Some of my talks at various conferences:
+                </div>
+                <br />
+                <a
+                    class="talk-video"
+                    href="https://www.youtube.com/watch?v=owhyY09iEk0"
+                    target="_blank"
+                >
+                    <img src="/images/devclub2.png" alt="" width="300px" /><span
+                        class="talk-video--text"
+                        >DevClub 2018 / Tallinn</span
+                    >
+                </a>
+                <br />
+                <a
+                    class="talk-video"
+                    href="https://www.youtube.com/watch?v=lkTH4-jsioA"
+                    target="_blank"
+                >
+                    <img src="/images/devclub.png" alt="" /><span
+                        class="talk-video--text"
+                        >DevClub 2017 / Tallinn</span
+                    >
+                </a>
+                <br />
+                <a
+                    class="talk-video"
+                    href="https://www.youtube.com/watch?v=QAVNsSAI6nk"
+                    target="_blank"
+                >
+                    <img src="/images/mjs2.png" alt="" /><span
+                        class="talk-video--text"
+                        >MoscowJS 2016 / Moscow</span
+                    >
+                </a>
+                <br />
+                <a
+                    class="talk-video"
+                    href="https://www.youtube.com/watch?v=NdxRTiM6pPo"
+                    target="_blank"
+                >
+                    <img src="/images/mjs1.png" alt="" /><span
+                        class="talk-video--text"
+                        >MoscowJS 2015 / Moscow</span
+                    >
+                </a>
+                <br />
+                <a
+                    class="talk-video"
+                    href="https://www.youtube.com/watch?v=F8Q3brDDZ3A"
+                    target="_blank"
+                >
+                    <img src="/images/rit.png" alt="" /><span
+                        class="talk-video--text"
+                        >FrontendConf 2015 / Moscow</span
+                    >
+                </a>
+            </div>
+            <div class="experience">
+                <div class="middle--header">Experience:</div>
+
+                <p>
+                    <b>Director of Engineering</b>
+                    <br />
+                    <i
+                        >Built a Frontend Department from scratch. More than 30
+                        employees.</i
+                    >
+                    <br />
+                    Paxful OÜ
+                    <br />
+                    November 2018 - current
+                </p>
+
+                <p>
+                    <b>JavaScript Developer</b>
+                    <br />
+                    <i>Development of various types of online casino games</i>
+                    <br />
+                    Evolution Gaming Estonia
+                    <br />
+                    January 2017 – April 2018
+                </p>
+                <p>
+                    <b>Senior Frontend Developer</b>
+                    <br />
+                    <i
+                        >Development from scratch and organising workflow
+                        process of a website with news of science -
+                        <a href="https://indicator.ru/" target="_blank"
+                            >https://indicator.ru/</a
+                        ></i
+                    >
+                    <br />
+                    Rambler&Co
+                    <br />
+                    April 2016 – December 2016
+                </p>
+                <p>
+                    <b>Frontend Developer</b>
+                    <br />
+                    <i
+                        >Development and support biggest news website in Russia
+                        -
+                        <a href="http://lenta.ru" target="_blank"
+                            >http://lenta.ru</a
+                        ></i
+                    >
+                    <br />
+                    Rambler&Co
+                    <br />
+                    April 2014 – April 2016
+                </p>
+                <p>
+                    <b>Team Lead / Actionscript Developer</b>
+                    <br />
+                    <i
+                        >Development and management small group of developers (6
+                        person)</i
+                    >
+                    <br />
+                    RIA Novosti
+                    <br />
+                    January 2011 – April 2014
+                </p>
+                <p>
+                    <b>Art Director</b>
+                    <br />
+                    <i>Brand Identity Definition</i>
+                    <br />
+                    Kraft Group
+                    <br />
+                    May 2008 – December 2010
+                </p>
+                <br />
+            </div>
+
+            <div class="contacts">
+                <div class="middle--header">
+                    <b>Contacts</b>
+                    <p>
+                        <a
+                            href="http://www.linkedin.com/in/mikhail-dunaev"
+                            target="_blank"
+                        >
+                            <i class="fa fa-linkedin"></i
+                        ></a>
+
+                        <a
+                            href="https://www.facebook.com/mdunaev"
+                            target="_blank"
+                        >
+                            <i class="fa fa-facebook"></i
+                        ></a>
+
+                        <a
+                            href="https://www.instagram.com/dunaev/"
+                            target="_blank"
+                        >
+                            <i class="fa fa-instagram"></i
+                        ></a>
+
+                        <a href="mailto:dunaev.m@gmail.com" target="_blank">
+                            <i class="fa fa-envelope-o"></i
+                        ></a>
+                    </p>
+
+                    <a class="cv" href="/CV-Mikhail-Dunaev.pdf" target="_blank">
+                        CV in PDF</a
+                    >
+                </div>
+            </div>
+
+            <div class="fader hidden"></div>
         </div>
-      </div>
 
-      <div class="fader hidden"></div>
-    </div>
-
-    <!-- <script type="text/javascript" src="./bundle/script.js"></script> -->
-  </body>
+        <!-- <script type="text/javascript" src="./bundle/script.js"></script> -->
+    </body>
 </html>
