--- a/index.html
+++ b/index.html
@@ -170,6 +170,18 @@
             </div>
             <div class="experience">
                 <div class="middle--header">Experience:</div>
+                
+                <p>
+                    <b>Engineering Manager</b>
+                    <br />
+                    <i
+                        >Engineering management and frontend development.</i
+                    >
+                    <br />
+                    On Air Entertainment
+                    <br />
+                    July 2021 - current
+                </p>
 
                 <p>
                     <b>Director of Engineering</b>
@@ -181,7 +193,7 @@
                     <br />
                     Paxful OÜ
                     <br />
-                    November 2018 - current
+                    November 2018 - July 2021
                 </p>
 
                 <p>
