--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="app">
             <div class="examples"></div>
             <div class="intro">
-                <p>Hello World!</p>
+                <p><span style="color: blue">Open to job offers.<span> Hello World!</p>
                 <p>
                     My name is Mikhail Dunaev.<i
                         class="fa fa-camera-retro cv-photo"
@@ -170,19 +170,6 @@
             </div>
             <div class="experience">
                 <div class="middle--header">Experience:</div>
-                
-                <p>
-                    <b>Engineering Manager</b>
-                    <br />
-                    <i
-                        >Engineering management and frontend development.</i
-                    >
-                    <br />
-                    On Air Entertainment
-                    <br />
-                    July 2021 - current
-                </p>
-
                 <p>
                     <b>Director of Engineering</b>
                     <br />
