--- a/index.html
+++ b/index.html
@@ -39,7 +39,11 @@
         <div class="app">
             <div class="examples"></div>
             <div class="intro">
-                <p><span style="color: blue">Open to job offers.<span> Hello World!</p>
+                <p><a
+                      target="_blank"
+                      href="https://www.linkedin.com/in/mikhail-dunaev/">
+                      Open to job offers.
+                   </a> Hello World!</p>
                 <p>
                     My name is Mikhail Dunaev.<i
                         class="fa fa-camera-retro cv-photo"
