--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                       target="_blank"
                       href="https://www.linkedin.com/in/mikhail-dunaev/">
                       Open to job offers.
-                   </a> Hello World!</p>
+                   </a><br /> Hello World!</p>
                 <p>
                     My name is Mikhail Dunaev.<i
                         class="fa fa-camera-retro cv-photo"
