--- a/index.html
+++ b/index.html
@@ -39,11 +39,7 @@
         <div class="app">
             <div class="examples"></div>
             <div class="intro">
-                <p><a
-                      target="_blank"
-                      href="https://www.linkedin.com/in/mikhail-dunaev/">
-                      Open to job offers.
-                   </a><br /> Hello World!</p>
+                <p>Hello World!</p>
                 <p>
                     My name is Mikhail Dunaev.<i
                         class="fa fa-camera-retro cv-photo"
@@ -174,6 +170,17 @@
             </div>
             <div class="experience">
                 <div class="middle--header">Experience:</div>
+                <p>
+                    <b>Co-founder & CTO</b>
+                    <br />
+                    <i
+                        >Development of Browser Native Blockchain Network</i
+                    >
+                    <br />
+                    Prfct OÜ
+                    <br />
+                    December 2021 - now
+                </p>
                 <p>
                     <b>Director of Engineering</b>
                     <br />
