--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
                 </p>
                 <p>
                     I'm 37 years old Engineering Manager / Software developer
-                    from Moscow, Russia, based in Tallinn, Estonia during the
-                    last 4 years.
+                     based in Tallinn, Estonia 🇪🇪 during the
+                    last 7 years.
                 </p>
                 <div class="middle--header">Expertise:</div>
                 <ul>
                     <li>
-                        12+ years in software development. Moscow: RIA Novosti,
-                        Rambler&Co. Estonia: Evolution Gaming, Paxful.
+                        14+ years in software development. prfct.ee, Evolution Gaming, Paxful,
+                        Rambler&Co.
                     </li>
 
                     <li>5+ years of engineering leadership experience.</li>
@@ -62,7 +62,7 @@
                     <li>
                         Expert in Frontend development. React, Redux,
                         Typescript, Functional approach.<br />
-                        Data visulisation, Animations, Rich Media, CMS and many
+                        Data visulisation, Games, Rich Media, CMS and many
                         more.
                     </li>
 
